@@ -1,24 +1,47 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id 'application'
+    id 'com.google.cloud.tools.jib' version '3.1.2'
 }
 
 group 'gg.discord.tj'
 version '1.0'
 
-sourceCompatibility = JavaVersion.VERSION_15
-targetCompatibility = JavaVersion.VERSION_15
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 
-jar {
-    manifest {
-        attributes 'Main-Class': 'gg.discord.tj.bot.app.Application'
-    }
+application {
+      mainClass = 'gg.discord.tj.bot.app.Application'
+      applicationDefaultJvmArgs = ['--enable-preview',
+                                   "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                                   "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                                   "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                                   "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                                   "--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                                   "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+                                   "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                                   "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                                   "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+      ]
 }
 
-shadowJar {
-    archiveName tasks.jar.archiveName
-    classifier ''
-    duplicatesStrategy DuplicatesStrategy.EXCLUDE
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+jib {
+    from.image = 'adoptopenjdk/openjdk16:alpine-slim'
+    to.image = 'togetherjava/tjbot:1.0'
+    container {
+        jvmFlags = ["--enable-preview",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+        ]
+        volumes = ["/var/tjbot"]
+    }
 }
 
 repositories {
